--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 		<title>Places to Travel to</title>
 		<link rel="stylesheet" href="style.css" />
 	</head>
-	
+
 	<body class="" id="body">
 		<div class="top">
 			<div class="title-col"><h1>Have I Been Here?</h1></div>
 			<div class="countdown-col h" id="a"><p>0 out of 12 places visited</p></div>
 		</div>
-		
+
 		<div class="bottom">
 			<!--first column of images-->
 			<div class="short-col">
@@ -63,8 +63,8 @@
 							<span class="popuptext p" id="ET">
 								<ul>
 									<li>The Eiffel Tower was finished on March 31, 1889.</li>
-									<li>It was the tallest man-made structure for 41 years until the Chrysler Building in New York was built in 1930.</li> 
-									<li>It is 324 meters tall and has 1,665 steps.</li> 
+									<li>It was the tallest man-made structure for 41 years until the Chrysler Building in New York was built in 1930.</li>
+									<li>It is 324 meters tall and has 1,665 steps.</li>
 									<li>Repainting the tower, which happens every seven years, requires 60 tonnes of paint.</li>
 									<li>The eiffel tower has its own lego set.</li>
 								</ul>
@@ -78,8 +78,8 @@
 					<div class="tall-place-row">
 						<div class="tall-img center-horzontal center-vertical popup" onClick="secondImage()">
 							<img src="images/LToP.jpg" class="contain-image">
-							<span class="popuptext" id="LToP"><p>another</p></span>
-							
+							<span class="popuptext" id="LToP"><p>The Leaning Tower of Piza is known for its unique structure.</p></span>
+
 						</div>
 						<div class="second-button">
 							<div class="tall-button blue p center-horizontal" onclick="addOne()"><p>I've been here!</p></div>
@@ -90,7 +90,7 @@
 						<div class="tall-img center-horzontal center-vertical popup" onClick="thirdImage()">
 							<img src="images/SoL.jpg" class="contain-image">
 							<span class="popuptext" id="SoL"><p>another</p></span>
-							
+
 						</div>
 						<div class="second-button">
 							<div class="tall-button blue p center-horizontal" onclick="addOne()"><p>I've been here!</p></div>
