--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 	<body class="" id="body">
 		<div class="top">
-			<div class="title-col"><h1>Have I Been Here?</h1></div>
+			<div class="title-col center-horizontal"><h1>Have I Been Here?</h1></div>
 			<div class="countdown-col h" id="a"><p>0 out of 12 places visited</p></div>
 		</div>
 
@@ -121,7 +121,13 @@
 					</div>
 					<div class="tall-place-row">
 						<div class="tall-img center-horzontal center-vertical popup" onClick="sixthImage()">
-							<span class="popuptext" id="AdT"><p>another</p></span>
+							<span class="popuptext p" id="AdT">
+								<ul>
+									<li>The construction of the Arc de Triomphe was ordered in 1806 by Napoleon, the French Emperor.</li>
+									<li>The construction of Arc de Triomphe was completed in 1836, long after Napoleon’s death in 1821.</li>
+									<li>The names of 128 battles of the first French Republic and Napoleon’s Empire are written on the white walls under the vault together with the names of the generals who took part in them.</li>
+								</ul>
+							</span>
 							<img src="images/AdT.jpg" class="contain-image">
 						</div>
 						<div class="second-button">
