--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				</div>
 				<div class="place-row">
 					<div class="short-img center-horizontal center-vertical popup2" onClick="eighthImage()">
-						<span class="popuptext2" id="C"><p>here</p></span>
+						<span class="popuptext2" id="C"><p>Did it change?</p></span>
 						<img src="images/C.jpg" class="contain-image">
 					</div>
 					<div class="first-button light_yellow">
