--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body class="" id="body">
 		<div class="top">
 			<div class="title-col center-horizontal"><h1>Have I Been Here?</h1></div>
-			<div class="countdown-col h" id="a"><p>0 out of 12 places visited</p></div>
+			<div class="countdown-col h" id="a"><p class="center-horizontal">0 out of 12 places visited</p></div>
 		</div>
 
 		<div class="bottom">
